# discord-rag-recipe-bot

./: .gitignore  Dockerfile  Makefile  langgraph.json  pyproject.toml
.github/workflows/: ingest-documents-manual.yml  ingest-documents.yml
data/: personal_recipe.docx
event_server/: Dockerfile  main.py  requirements.txt
src/graphs/: __init__.py  _schema.py  graphs.py
src/tools/: tools.py
src/utils/: ingest.py  llm.py  vector.py
